--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,6 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>course3.hibernate.lesson6</groupId>
   <artifactId>Course3.hibernate.hw6</artifactId>
-    <packaging>war</packaging>
   <version>0.0.1</version>
 
   <name>Course3.hibernate.hw6 Maven Webapp</name>
@@ -29,10 +28,18 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.6.14.Final</version>
     </dependency>
-
   </dependencies>
-
   <build>
     <finalName>Course3.hibernate.hw6</finalName>
-  </build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <source>8</source>
+            <target>8</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </build>
 </project>
